# wilcoxon-test-simple-code-analysis

./: .gitignore  README.md  pyproject.toml
src/: config.toml  main.py
