[tool.poetry]
name = "cv-germination-count-analysis"
version = "0.1.0"
description = ""
authors = ["Marcelo-Kenji-Noda <54538758+Marcelo-Kenji-Noda@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
